# biplanevsaliens

./: .gitignore  Cargo.toml  README.md  build.rs
resources/: bullet_texture.fs  bullet_texture.vs  camera.fs  camera.vs  font_texture.fs  font_texture.vs  ground.fs  ground.vs  plane_loading.fs
resources/objects/: alien.mm3d  alien.mtl
resources/textures/: font.xcf
src/: bullet.rs  camera.rs  common.rs  draw_text.rs  enemy_ship.rs  explosion.rs  landscape.rs  main.rs  mesh.rs  model.rs  player_shape.rs  sdl_main.rs  shader.rs  sound.rs  start_screen.rs
